fix overlapping

--- a/Websites/style.css
+++ b/Websites/style.css
@@ -1,5 +1,9 @@
 *{
     justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0;
     
 }
 
@@ -8,6 +12,9 @@
     transition: 1s ease-in-out;
     
     
+}
+.navbar-brand{
+    color: white;
 }
 
 .second-nav{
@@ -62,7 +69,7 @@
     margin: 0 auto;
     
     > * {
-      flex: 1 1 calc(200px);
+      flex: auto;
       max-width: calc(100% - 1rem);
     }
 
@@ -79,14 +86,17 @@
 }
 
 .left-side{    
-    align-items: flex-end;
+    flex: 1;
+    justify-content: flex-start;
     color: white;
-    background-color: rgba(0, 0, 0, 0.555);
+    background-color: rgba(0, 134, 158, 0.699);
     height: fit-content;
     padding: 20px;
     margin-top: auto;
 }
 .right-side{
+    flex: auto;
+    justify-content: flex-end;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.418);
     height: fit-content;
@@ -122,6 +132,7 @@ fieldset .row{
 }
 
 .body-items{
+    flex-wrap: wrap;
     gap: 1rem;
     padding: 10px;
     background-color: rgb(0, 134, 158);
@@ -153,8 +164,8 @@ fieldset .row{
     max-width: 100%;
     height: fit-content;
     display: flex;
-flex-wrap: wrap; 
-justify-content: left;
+    flex-wrap: wrap;
+justify-content: center;
 gap: 2rem; 
 text-align: center;
 color: white;
@@ -186,6 +197,7 @@ article{
 .doctors{
     color: rgb(0, 134, 158);
     flex-wrap: wrap;
+    transition: all ease-in-out 0.5s ;
     
     height: fit-content;
     padding: 30px;
@@ -251,55 +263,123 @@ border-radius: 5px;
 /*Reviews*/
 
 .reviews{
-    background-color: black;
-    color: white;
-    padding: 10px;
-    border-bottom: 1px solid white;
+    
     justify-content: space-evenly;
+    
+    padding: 10px;
+    margin: 0 auto;
+    outline: solid red;
+    width: 90%;
+    max-width: 100%;
+    color:rgba(0, 134, 158, 0.699);
+    
+    border-bottom: 1px solid white;
     text-align: center;
+    
     background-color: white;
+    
+    
+    
+    
+    gap: 2rem;
+    
 
 .review-list{
-    
-    flex-wrap: wrap;
+    flex: 1 calc(100% - 1);
+   max-width: 90%;
+   margin: 0 auto;
     display: flex;
-    gap: 5rem;
+    flex-wrap: wrap;
+    gap: 2rem;
     justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
     
-    
-    
-    
+   
 }
     .review-box{
-        flex: auto;
-        min-width: 5rem;
+        flex-wrap: wrap;
+        border-top: solid;
+        width: 20rem;
+        height: 20rem;
+        
+        transition: 0.3s all;
+       
         gap: 5rem;
         padding: 10px;
         background-color: white;
-        color: black;
+        color:rgba(0, 134, 158, 0.699);
         box-shadow: 0 5px 5px rgba(82, 82, 82, 0.589);
+        
+
         
         h5{
             font-weight: bold;
+            transition: all 0.1s ease-in-out;
         }
+        p{
+            transition: all 0.5s ease-in-out;
+        }
+
 
 &:hover{
     background-color: rgba(0, 134, 158, 0.699);
     box-shadow: 0 5px 5px rgb(0, 134, 158);
     color: white;
-    transform: rotate(2deg);
-    transition: 0.5s ease-in-out;
+    transform: rotateY(15deg);
+    transform: rotateX(2deg);
+    cursor: pointer;
+    border-bottom: 15px solid white;
+    transform: scale(1.05);
+    
+    
+    box-shadow: -10px 10px 10px grey;
+    outline: none;
+    transform: skewY(calc(100% * 15deg));
+    
+    *{
+        text-shadow: 0px 0px 0px rgb(0, 0, 0);
+        transform: scale(1.03);
+        
+        
+    }
     
 }
+
+    }
+    .active{
+        opacity: 1;
+        width: 100%;
+        
+        outline: auto;
+        
     }
 }
+.review-box .rating{
+    align-items: flex-end;
+    justify-content: flex-end;
+    background-color: red;
+    width: 10rem;
+    margin: 0 auto 0;
+    
+    
+    
+}
+
+
 
 .below-body{
     text-align: center;
     background-color: rgb(0, 134, 158);
     color: white;
     padding: 10px;
-    height: 10rem;
+    height: fit-content;
+    flex-wrap: wrap;
+    max-width: 100%;
+    .happy-clients{
+        flex:auto;
+        flex-wrap: wrap;
+    }
 }
 footer{
     padding: 10px;
@@ -307,7 +387,10 @@ footer{
     color: white;
     background-color: rgb(0, 134, 158);
     
-    
+    .right{
+        outline: auto;
+        padding: 10px;
+    }
     
 
 .footer-flex{
@@ -317,8 +400,8 @@ footer{
     gap: 2rem;
     padding: 10px;
     justify-content: center;
-    
-    
+    flex-wrap: wrap;
+    max-width: 100%;
 
     iframe{
         
@@ -329,29 +412,41 @@ footer{
         
     }
     .left, .right{
+        flex: 30rem;
         width: 50%;
         margin: 0 auto;
-        top: 0;
+        max-width: 100%;
+        
     }
 }
 }
+
 .quick-links .footer-links{
+ outline: auto;
     gap: 2rem;
     display: flex;
-    
+    justify-content: left;
     list-style: none;
+    padding: 10px;
 }
 .quick-links .footer-links li a{
     
     text-decoration: none;
     list-style: none;
     color: white;
+    
+    &:hover{
+        background-color: rgb(1, 49, 58);
+        width: 2rem;
+        height: fit-content;
+    }
+    
 }
     .follow-us
     .socials{
+        justify-content: left;
         display: flex;
         gap: 1rem;
-        
     }
     li{
         
@@ -364,4 +459,102 @@ footer{
 .copyright a{
 text-decoration: none;
 color: rgb(1, 49, 58);
+}
+.address{
+    z-index: 2;
+}
+.address .links{
+    border-radius: 5px;
+    display: none;
+    
+}
+.address:hover{
+    color: black;
+    .links{
+        display: block;
+        width: 100%;
+        li{
+            width: 100%;
+            
+        &:hover{
+        
+        background-color: rgb(1, 49, 58);
+        color: white;
+        cursor: pointer;
+        }
+    }
+    }
+    
+}
+
+.happy-clients{
+    display: flex;
+    gap: 2rem;
+}
+
+/*counter*/
+.counter{
+    
+    transition: all ease-in-out 0.3s ;
+    gap: 1rem;
+    display: block;
+    justify-content: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.counter h1{
+    
+    
+    border-radius: 5px;
+    padding: 10px;
+    height: fit-content;
+    font-size:5rem;
+    display: flex;
+    width: fit-content;
+    margin: 0 auto;
+    outline: auto;
+    transition: all ease-in-out 0.3s;
+    height: 5rem;
+    &:hover{
+        
+        /*text-shadow: 0px 5px 1px rgba(14, 14, 14, 0.89);*/
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.87);
+        cursor: pointer;
+        outline: none;
+        
+    }
+    
+}
+.line{
+    margin: 0 auto;
+    border-bottom: solid 5px white;
+    background-color: white;
+    height: 0.5rem;
+    border-radius: 5px;
+    width: 10rem;
+}
+.counter h1::before{
+
+content: counter(count);
+animation: counter 0.5s ;
+counter-reset: none;
+animation-fill-mode: forwards;
+}
+
+@keyframes counter {
+    0%{
+        counter-increment: count 0;
+    }
+    20%{
+        counter-increment: count 20;
+    }
+    50%{
+        counter-increment: count 50;
+    }
+    80%{
+        counter-increment: count 90;
+    }
+    100%{
+        counter-increment: count 125;
+    }
 }
